# teensy-audio-launch-ctrl

./: CMakeLists.txt  README.md  library.json  library.properties
.github/workflows/: lib_linux.yml  lib_teensy.yml
cmake/toolchains/: teensy41.cmake
examples/: CMakeLists.txt
examples/array/: CMakeLists.txt
examples/launch_ctrl/: CMakeLists.txt  launch_ctrl.ino
examples/midilooper/: CMakeLists.txt
extras/controls_example/: CMakeLists.txt  controls_example.cpp
extras/menu_example/: CMakeLists.txt  menu_example.cpp
extras/menu_example2/: CMakeLists.txt  menu_example2.cpp
extras/sample_launcher/: CMakeLists.txt  sample_launcher.cpp
extras/sampler/: CMakeLists.txt  DevicesScene.h  DirectoryFileNameCache.h  EditScene.h  MySampler.h  Sampler.h  SamplerModel.h  WavePreview.h  WavePreviewBuilder.h  XXMySampler.h  sampler.cpp  sampler_main.cpp
extras/scenecontroller/examples/scene_menus/: CMakeLists.txt  icons.h  scene_menus.cpp
extras/scenecontroller/src/: CMakeLists.txt  scenecontroller.cpp  scenecontroller.h
extras/sd_menu_example/: CMakeLists.txt  sd_menu_example.cpp
extras/teensy_controls/examples/basic/: CMakeLists.txt
src/: CMakeLists.linux.cmake.in  CMakeLists.txt  Device.h  TeensyAudioLaunchCtrl.cpp  TeensyAudioLaunchCtrl.h  abstractdisplay.h  abstractdisplaycontroller.h  polyphonic.cpp  polyphonic.h  sampleplaymidicontroller.h  sampleplaymidicontrollerenums.h  sdsampleplayernote.h  serialdisplay.h  st7735display.h
test/: CMakeLists.txt  test_polyphonic.cpp
