cmake_minimum_required(VERSION 3.5)
project(teensy-variable-playback)
if (NOT DEFINED TEENSY_VERSION)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
    set(CMAKE_BUILD_TYPE Debug)
endif()

if (NOT DEFINED BUILD_FOR_LINUX)    
    import_arduino_library(cores ${COREPATH} avr debug util)
    import_arduino_library(SPI ${DEPSPATH}/SPI)
    import_arduino_library(SdFat ${DEPSPATH}/SdFat/src common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library(SD ${DEPSPATH}/SD/src)
    import_arduino_library(SerialFlash ${DEPSPATH}/SerialFlash util)
    import_arduino_library(Wire ${DEPSPATH}/Wire utility)
    import_arduino_library(arm_math ${DEPSPATH}/arm_math/src)
    import_arduino_library(Audio ${DEPSPATH}/Audio utility)
    add_subdirectory(src)
    add_subdirectory(examples)
else()
    add_subdirectory(src)
    add_subdirectory(test)
endif()