cmake_minimum_required(VERSION 3.5)
project(teensy-audio-launch-ctrl)
if (NOT DEFINED TEENSY_VERSION)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
    set(CMAKE_BUILD_TYPE Debug)
endif()

if (NOT DEFINED BUILD_FOR_LINUX)    
    import_arduino_library(cores ${COREPATH})
    import_arduino_library(SPI ${DEPSPATH}/SPI)
    import_arduino_library(SdFat ${DEPSPATH}/SdFat_PaulStoffregen/src common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library(SD ${DEPSPATH}/SD/src)
    import_arduino_library(SerialFlash ${DEPSPATH}/SerialFlash util)
    import_arduino_library(Wire ${DEPSPATH}/Wire utility)
    import_arduino_library(arm_math ${DEPSPATH}/arm_math/src)
    import_arduino_library(Audio ${DEPSPATH}/Audio utility)
    import_arduino_library(MIDI ${DEPSPATH}/MIDI/src)
    import_arduino_library(USBHost_t36 ${DEPSPATH}/USBHost_t36)
    import_arduino_library(ST7735_t3 ${DEPSPATH}/ST7735_t3)
    add_subdirectory(src)
    add_subdirectory(examples)
else()
    add_subdirectory(src)
    #add_subdirectory(extras/ILI9341_t3_controls)
    #add_subdirectory(extras/ILI9341_t3_Menu)
    #add_subdirectory(extras/ArduinoMenu/src)
    #add_subdirectory(extras/controls_example)
    #add_subdirectory(extras/menu_example)
    #add_subdirectory(extras/menu_example2)
    #add_subdirectory(extras/sd_menu_example)
    add_subdirectory(extras/sample_launcher)
    #add_subdirectory(extras/scenecontroller/src)
    add_subdirectory(extras/scenecontroller/examples/scene_menus)
    add_subdirectory(extras/sampler)
    #add_subdirectory(extras/teensy_controls/src)
    #add_subdirectory(extras/teensy_controls/examples/view_example)
    #add_subdirectory(extras/teensy_controls/examples/basic)
    #add_subdirectory(test)
endif()